# quality-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Claude.md  README.md  initial-prompt.txt  pyproject.toml
.github/workflows/: build-images.yml  terraform-apply.yml  terraform-plan.yml
agents/: __init__.py  code_analyzer.py  crew.py  test_coverage.py  test_planner.py
app/: __init__.py  config.py  logging_config.py  main.py  metrics.py  webhook_audit.py  webhook_receiver.py
deployment/: Dockerfile  README.md  docker-compose.yml
deployment/k8s/grafana/: grafana-config.yaml  grafana-deployment.yaml  grafana-pvc.yaml  grafana-service.yaml
deployment/k8s/prometheus/: prometheus-config.yaml  prometheus-deployment.yaml  prometheus-pvc.yaml  prometheus-rbac.yaml  prometheus-service.yaml
deployment/prometheus/: prometheus.yml
docs/: README.md
docs/guides/: agents.md  api.md  deployment.md  development.md  getting-started.md  git-workflow.md  github-webhook-setup.md  testing.md  troubleshooting.md
docs/planning/: implementation-plan.md
docs/planning/decisions/: template.md
docs/reference/: architecture.md  configuration.md  dependencies.md  environment-variables.md  security.md
models/: __init__.py  analysis.py  github.py  metrics.py
scripts/: README.md  inspect_audit_logs.py  setup-branch-protection.sh
src/fargate/: Dockerfile  processor.py
src/lambda/webhook_receiver/: __init__.py  handler.py
terraform/: README.md  backend.tf  variables.tf
terraform/environments/dev/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/modules/crewai-processor/: main.tf  outputs.tf  variables.tf
terraform/modules/crewai-processor/sqs_trigger_code/: index.py
terraform/modules/event-storage/: main.tf  outputs.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/oidc-github/: main.tf  outputs.tf  variables.tf
terraform/modules/webhook-receiver/: main.tf  outputs.tf  variables.tf
terraform/scripts/: bootstrap.sh
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_e2e_happy_path.py  test_e2e_security.py  test_e2e_workflows.py
tests/integration/: __init__.py  test_metrics_flow.py  test_webhook_flow.py
tests/unit/: test_config.py  test_main.py  test_metrics.py  test_webhook_audit.py  test_webhook_receiver.py
